err/jquery.pyproxy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jquery'...
Listing './lib/python3.5/site-packages/jquery/pyproxy'...
Compiling './lib/python3.5/site-packages/jquery/pyproxy/base.py'...
***   File "./lib/python3.5/site-packages/jquery/pyproxy/base.py", line 157
    exec 'from jquery.pyproxy.plugins.%s import grammar' % plugin
                                                       ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/jquery/pyproxy/media'...
Listing './lib/python3.5/site-packages/jquery/pyproxy/plugins'...
Listing './lib/python3.5/site-packages/jquery/pyproxy/profiles'...
Listing './lib/python3.5/site-packages/jquery/pyproxy/profiles/default'...
Listing './lib/python3.5/site-packages/jquery/pyproxy/profiles/tests'...
Listing './lib/python3.5/site-packages/jquery/pyproxy/samples'...
Listing './lib/python3.5/site-packages/jquery/pyproxy/samples/django'...
Listing './lib/python3.5/site-packages/jquery/pyproxy/samples/plone'...
Listing './lib/python3.5/site-packages/jquery/pyproxy/samples/simple_html'...
Listing './lib/python3.5/site-packages/jquery/pyproxy/skins'...
Listing './lib/python3.5/site-packages/jquery/pyproxy/skins/pyproxy'...
Listing './lib/python3.5/site-packages/jquery/pyproxy/skins/pyproxy_tests'...
Listing './lib/python3.5/site-packages/jquery/pyproxy/tests'...
Compiling './lib/python3.5/site-packages/jquery/pyproxy/tests/test_plone.py'...
***   File "./lib/python3.5/site-packages/jquery/pyproxy/tests/test_plone.py", line 39
    print info[1]
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jquery.pyproxy-0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
